[gd_scene load_steps=5 format=3 uid="uid://cyx51skguk7na"]

[ext_resource type="Script" uid="uid://vqxgfw1jc7xx" path="res://scripts/ui_codes/repair_panel.gd" id="1_edbnm"]
[ext_resource type="StyleBox" uid="uid://cals22duy8qet" path="res://styles/base_style.tres" id="2_daqx6"]
[ext_resource type="StyleBox" uid="uid://c0usgdhmbo1kb" path="res://styles/clt_btn.tres" id="3_jwkrl"]
[ext_resource type="AudioStream" uid="uid://0vv6fm5i5oco" path="res://assets/audio/hammering_fixing_sfx_1.mp3" id="4_jwkrl"]

[node name="repair_panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1491.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_edbnm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_daqx6")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="build_name" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "<building_name>"
horizontal_alignment = 1

[node name="repair_btn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_jwkrl")
text = "REPAIR"

[node name="respi_lbl" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "respi"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jwkrl")

[connection signal="pressed" from="Panel/VBoxContainer/repair_btn" to="." method="_on_repair_btn_pressed"]
